security: remove .env from history, fix .gitignore, add .env.example
- Removed .env from all git history using git-filter-repo
- Added .env, data_cache/, data/redis/, *.aof, *.rdb to .gitignore
- Added .env.example with safe placeholder values
- IMPORTANT: Rotate your POLYGON_API_KEY — it was publicly exposed

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,28 @@ redis-only.yml
 multi_source_patch.diff
 tick_hub.py
 # …etc.
+
+# ── Secrets (NEVER commit these) ──────────────────────────────────────────────
+.env
+.env.*
+!.env.example
+
+# ── Runtime data (should not be in git) ───────────────────────────────────────
+data_cache/
+data/redis/
+*.aof
+*.rdb
+dump.rdb
+
+# ── Python build artifacts ─────────────────────────────────────────────────────
+*.egg-info/
+dist/
+build/
+__pycache__/
+*.pyc
+*.pyo
+.pytest_cache/
+
+# ── Logs ───────────────────────────────────────────────────────────────────────
+*.log
+logs/
